# aster

./: .gitignore  README.md  README_devs.md  requirements-amd-gfx950.txt  requirements.txt
contrib/kittens/: rocprof-kittens.sh
demo/: add_10.mlir  generate_add_10.py  generate_mfma_10.py  run.py
integration_test/: test_mfma_e2e.py  test_utils.py
lib/: CMakeLists.txt  Init.cpp
lib/API/: API.cpp
lib/Analysis/: CMakeLists.txt  DPSAliasAnalysis.cpp  DPSAnalysis.cpp  InterferenceGraph.cpp  LivenessAnalysis.cpp  MemoryDependenceAnalysis.cpp  ThreadUniformAnalysis.cpp  ValueProvenanceAnalysis.cpp
lib/CodeGen/: CMakeLists.txt  Legalizer.cpp  MemOpsLegalization.cpp  TypeConverter.cpp
lib/Dialect/AMDGCN/Analysis/: CMakeLists.txt  LDSInterferenceGraph.cpp  RangeConstraintAnalysis.cpp  RegisterInterferenceGraph.cpp  WaitAnalysis.cpp
lib/Dialect/AMDGCN/CodeGen/: CMakeLists.txt  CodeGenPatterns.cpp  Legalizer.cpp
lib/Dialect/AMDGCN/IR/: AMDGCN.cpp  AMDGCNTypes.cpp  AMDGCNVerifiers.cpp  Utils.cpp
lib/Dialect/AMDGCN/Transforms/: AMDGCNBufferization.cpp  AMDGCNNopInsertion.cpp  AMDGCNOptimizeStraightLineWaits.cpp  Bufferization.cpp  CMakeLists.txt  ConvertLDSBuffers.cpp  ConvertSCFControlFlow.cpp  ConvertWaits.cpp  ExpandMetadataOps.cpp  HoistOps.cpp  InstructionSchedulingAutoschedulePass.cpp  LegalizeCF.cpp  LegalizeOperands.cpp  Pipelines.cpp  PreloadLibrary.cpp  RegisterAlloc.cpp  RegisterColoring.cpp  RegisterDCE.cpp  RegisterDealloc.cpp  SetABI.cpp  ToAMDGCNPatterns.cpp  ToRegisterSemantics.cpp  WaitInsertion.cpp
lib/Dialect/AsterUtils/IR/: AsterUtilsOps.cpp  AsterUtilsTypes.cpp  IntRangeImpl.cpp
lib/Dialect/AsterUtils/Transforms/: AsterSelectiveInlining.cpp  CMakeLists.txt  DestructureStructIterArgs.cpp  OptimizePtrAdd.cpp  ResolveAnyIterArgs.cpp
lib/Dialect/LSIR/CodeGen/: CodeGenPatterns.cpp
lib/Dialect/LSIR/IR/: LSIROps.cpp
lib/Dialect/LSIR/Transforms/: ToLSIRPatterns.cpp
lib/IR/: CMakeLists.txt  InstImpl.cpp  PrintingUtils.cpp  SSAMap.cpp
lib/Interfaces/: AllocaOpInterface.cpp  CMakeLists.txt  InstOpInterface.cpp  LivenessOpInterface.cpp  RegisterType.cpp
lib/Transforms/: CMakeLists.txt  ConstexprExpansion.cpp  OpScheduling.cpp  SCFPipelineAsterSched.cpp  ToIntArith.cpp  Utils.cpp
mlir_kernels/: README.md  batchedsmallgemm_dword4_mxnxk_16x16x16_f16f16f32.mlir  common.py  copy-1d-dwordx4.mlir  gemm_config.py  gemm_dword4_mxnxk_16x16x16_f16f16f32.mlir  gemm_sched_1wave_dword4_mxnxk_16x16x16_f16f16f32.mlir  gemm_sched_dword4_mxnxk_16x16x16_f16f16f32.mlir  kernel_utils.py  mfma_dword4_mxnxk_16x16x16_f16f16f32.mlir
mlir_kernels/benchmarks/: benchmark_batchedsmallgemm_dword4_mxnxk_16x16x16_f16f16f32.py  benchmark_batchedsmallgemm_dword4_mxnxk_16x16x16_f16f16f32_results.txt  benchmark_copy_1d.py  benchmark_gemm_dword4_mxnxk_16x16x16_f16f16f32.py  benchmark_utils.py  rocprof-batchedsmallgemm-dword4-mxnxk-16x16x16-f16f16f32.sh  rocprof-gemm-1wave-dword4-mxnxk-16x16x16-f16f16f32.sh  run_benchmarks.sh  test_benchmarks.py
mlir_kernels/nanobenchmarks/: nanobench_global_load.mlir  nanobench_global_load.py  nanobench_lds_read_mfma_A_wave_16x16xf16.mlir  test_nanobenchmarks.py  (+12 more)
python/: CMakeLists.txt
python/aster/: pass_pipelines.py  testing.py
python/aster/testing/: __init__.py  flush_llc.py
test/: CMakeLists.txt  lit.cfg.py
test/Analysis/: dps-analysis.mlir  dps-clobbering.mlir  dps-liveness.mlir
test/CodeGen/: legalization.mlir
test/Dialect/AMDGCN/: canonicalize.mlir  cdna3-ops-invalid.mlir  cdna3-ops.mlir  cdna4-scaled-mfma.mlir  cmp-ops.mlir  conversion-pack-ops.mlir  effects.mlir  inline.mlir  invalid.mlir  ops.mlir  type-invalid.mlir  type.mlir  vop2.mlir
test/Dialect/AMDGCN/Analysis/: dps-alias-analysis.mlir  interference-analysis.mlir  lds-buffer-invalid.mlir  lds-interference.mlir  liveness-analysis.mlir  memory-dependence-analysis.mlir  range-analysis.mlir  range-constraints.mlir  register-interference.mlir  register-liveness.mlir  value-provenance-analysis.mlir  wait-analysis.mlir
test/Dialect/AMDGCN/Transforms/: amdgcn-nop-insertion.mlir  amdgcn-optimize-straight-line-waits.mlir  aster-selective-inlining.mlir  bufferization-cf-bbargs.mlir  bufferization-clobber.mlir  bufferization.mlir  convert-lds-allocs.mlir  convert-scf-iter-args.mlir  convert-waits.mlir  expand-ops.mlir  legalize-cf.mlir  legalize-operands.mlir  mem2reg.mlir  metaprogramming.mlir  reg-alloc.mlir  reg-delloc.mlir  register-coloring.mlir  register-dce.mlir  to-amdgcn.mlir  to-register-semantics.mlir  wait-insertion.mlir
test/Dialect/AsterUtils/: assume-range-verifier.mlir  canonicalize.mlir  ops.mlir  struct.mlir
test/Dialect/AsterUtils/Transforms/: destructure-struct-iter-args.mlir  optimize-ptr.mlir  resolve-any-iter-args.mlir
test/Dialect/LSIR/: canonicalize.mlir  invalid.mlir  ops.mlir
test/Dialect/LSIR/Transforms/: codegen-cf.mlir  codegen.mlir  to-lsir.mlir
test/Transforms/: arith-opt.mlir  instruction-scheduling-expected-failure.mlir  instruction-scheduling.mlir  scf-pipeline-epilogue-parallel.mlir  scf-pipeline-gaps.mlir  scf-pipeline-gcd-unroll.mlir  scf-pipeline-iv-dep.mlir  scf-pipeline-lds.mlir  scf-pipeline-multi-value.mlir  scf-pipeline-three-stage.mlir  scf-pipeline-two-stage.mlir  to-int-arith.mlir
test/integration/: __init__.py  buffer-copy-e2e.mlir  buffer-idxen-e2e.mlir  conversion-pack-e2e.mlir  mfma-e2e.mlir  mfma-f8f6f4-e2e.mlir  mfma-to-global-store-scheduled-allocated-1x1x1.mlir  mfma-to-global-store-scheduled-allocated.mlir  test_buffer_copy_e2e.py  test_buffer_ops_e2e.py  test_conversion_pack_e2e.py  test_hsaco.py  test_mfma_e2e.py  test_mfma_f8f6f4_e2e.py  test_utils.py
test/lib/Pass/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td  TestAMDGCNInterferenceAnalysis.cpp  TestAMDGCNRangeAnalysis.cpp  TestBufferAnalysis.cpp  TestDPSAliasAnalysis.cpp  TestDPSClobberingAnalysis.cpp  TestDPSLiveness.cpp  TestInterferenceAnalysis.cpp  TestLDSInterferenceGraph.cpp  TestLivenessAnalysis.cpp  TestMemoryDependenceAnalysis.cpp  TestRangeAnalysis.cpp  TestValueProvenanceAnalysis.cpp  TestWaitAnalysis.cpp
test/python/: ir.py  test_hsaco.py
(+139 files in other folders)
